[gd_scene load_steps=11 format=3 uid="uid://bvukqew7inmoq"]

[ext_resource type="Script" path="res://scripts/RigidBodyCar.gd" id="1"]
[ext_resource type="Script" path="res://scripts/WheelSuspension.gd" id="2"]
[ext_resource type="AudioStream" path="res://sounds/tres/EngineSample.tres" id="3"]
[ext_resource type="Script" path="res://scripts/Gui/Gui.gd" id="4"]
[ext_resource type="Material" path="res://materials/tire.tres" id="5"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/GuiApps/TireInfoApp.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/GuiApps/InputApp.tscn" id="8"]

[sub_resource type="Curve" id="8"]
_data = [Vector2(0, 0.563636), 0.0, 0.0, 0, 0, Vector2(0.575472, 1), 0.0, 0.0, 0, 0, Vector2(0.962264, 0.809091), -0.335178, -0.335178, 0, 0, Vector2(1, 0.109091), -6.85253, 0.0, 0, 0]
point_count = 4

[sub_resource type="CylinderMesh" id="10"]
material = ExtResource("5")
top_radius = 0.3
bottom_radius = 0.3
height = 0.2
radial_segments = 16

[node name="RigidBodyCar" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 2
mass = 700.0
script = ExtResource("1")
rpm_clutch_out = 2000.0
torque_curve = SubResource("8")
engine_moment = 0.2
engine_sound = ExtResource("3")
gear_ratios = [3.5, 3.0, 2.5, 1.72, 1.2, 1.0]
gear_inertia = 0.09

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.6, 4.4)
script = ExtResource("6")
follow_this_path = NodePath("../CamTarget")

[node name="Wheel_br" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 1.5)
script = ExtResource("2")
bump = 7000.0
rebound = 5000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheel_br"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("10")
skeleton = NodePath("")

[node name="Wheel_bl" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 1.5)
script = ExtResource("2")
bump = 7000.0
rebound = 5000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheel_bl"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("10")
skeleton = NodePath("")

[node name="Wheel_fr" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, -1.4)
script = ExtResource("2")
bump = 7000.0
rebound = 5000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheel_fr"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("10")
skeleton = NodePath("")

[node name="Wheel_fl" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, -1.4)
script = ExtResource("2")
bump = 7000.0
rebound = 5000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheel_fl"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("10")
skeleton = NodePath("")

[node name="EngineSound" type="AudioStreamPlayer" parent="."]

[node name="Gui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="Essentials" type="Panel" parent="Gui"]
self_modulate = Color(1, 1, 1, 0.556863)
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/Essentials"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GearLabel" type="Label" parent="Gui/Essentials/VBoxContainer"]
layout_mode = 2
text = "Gear"

[node name="Speedlabel" type="Label" parent="Gui/Essentials/VBoxContainer"]
layout_mode = 2
text = "Speed"

[node name="RpmLabel" type="Label" parent="Gui/Essentials/VBoxContainer"]
layout_mode = 2
text = "Rpm"

[node name="FuelLabel" type="Label" parent="Gui/Essentials/VBoxContainer"]
layout_mode = 2
text = "Fuel"

[node name="TireInfoApp" parent="Gui" instance=ExtResource("7")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 150.0
offset_bottom = 200.0
wheel_fl_path = NodePath("../../Wheel_fl")
wheel_fr_path = NodePath("../../Wheel_fr")
wheel_bl_path = NodePath("../../Wheel_bl")
wheel_br_path = NodePath("../../Wheel_br")

[node name="InputApp" parent="Gui" instance=ExtResource("8")]
anchors_preset = 0

[node name="CamTarget" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17515, 0)
